# som.codes

./: .editorconfig  .gitignore  Cargo.toml  README.md  askama.toml  build.rs  deploy.sh
build_src/: assets.rs  blog.rs  error_pages.rs  errors.rs  main.rs  main_page.rs  nav.rs  rss.rs
build_src/node_worker/: index.js  mod.rs  package.json
build_src/templates/: _base.html.j2  blog_list.html.j2  blog_post.html.j2  error_page.html.j2  main_page.html.j2
build_src/templates/blog_rss/: item.rss  main.rss
build_src/templates/components/: navbar.html.j2
src/: main.md
src/assets/css/: dark.css  global.css  hljs.css
src/blog/: 2019-07-12-transcoding-music.md  2019-12-07-deploying-static-sites.md  2019-12-30-jvm-hackery-noverify.md  2020-01-07-hide-signal-phone-numbers.md  2020-02-01-qmk-reactive-rgb.md  2021-06-08-duo-mobile-hotp.md  2022-01-09-extract-multimc-msa-cid.md
