[package]
name = "som_codes"
version = "0.1.0"
authors = ["videogame hacker <half-kh-hacker@hackery.site>"]
edition = "2018"
build = "build.rs"

[[bin]]
name = "som_codes"
path = "build_src/main.rs"

[dependencies]
askama = "0.10.5"
chrono = "0.4.19"
once_cell = "1.7.2"
regex = "1.5.4"
serde = "1.0.126"
serde_json = "1.0.64"
siru = { git = "https://github.com/videogame-hacker/siru.git" }
thiserror = "1.0.24"
